# cimg-bootstrap

./: CMakeLists.txt  conanfile.txt
src/: main.cpp
